--- a/references.bib
+++ b/references.bib
@@ -316,6 +316,20 @@
   keywords  = {antenna arrays;learning (artificial intelligence);MIMO communication;telecommunication computing;time division multiplexing;transmitting antennas;transmit antenna selection;signal processing technique;multiantenna systems;large-scale antenna arrays;RF chains;online learning scheme;active antennas;high-performance antennas;radio-frequency chains;time division duplexing;single-antenna users;massive MIMO systems;combinatorial complexity;channel state information measurement;Thompson sampling;COST 2100 channel model;Radio frequency;Transmitting antennas;Downlink;Uplink;Base stations;Antenna selection;massive MIMO;online learning;Thompson sampling},
 }
 
+@InProceedings{Aittomaeki2011,
+  author    = {T. {Aittomäki} and H. {Godrich} and H. V. {Poor} and V. {Koivunen}},
+  title     = {Resource allocation for target detection in distributed MIMO radars},
+  booktitle = {2011 Conference Record of the Forty Fifth Asilomar Conference on Signals, Systems and Computers (ASILOMAR)},
+  year      = {2011},
+  pages     = {873-877},
+  month     = {Nov},
+  abstract  = {A distributed multiple-input multiple-output (MIMO) radars using transmitters and receivers distributed over a large area can offer improved target detection, estimation, and tracking capabilities. In order to achieve best performance, it is necessary that the use of resources is optimized in such a radar system. In this paper, we consider the optimization of the transmit power of the transmitters for the purpose of target detection. We derive the optimal Neyman-Pearson detector without assuming whiteness of noise or independence of scattering and formulate the problem of optimizing the probability of detecting targets in an area of surveillance. Numerical examples are provided to demonstrate the effectiveness of the method.},
+  doi       = {10.1109/ACSSC.2011.6190133},
+  groups    = {Power optimization},
+  issn      = {1058-6393},
+  keywords  = {MIMO radar;object detection;radar receivers;radar tracking;radar transmitters;resource allocation;target tracking;white noise;resource allocation;target detection probability;distributed MIMO radars;distributed multiple-input multiple-output radars;radar transmitters;radar receivers;target estimation;target tracking;power transmission;optimal Neyman-Pearson detector;noise scattering;surveillance area;Transmitters;Resource management;Receivers;Noise;Object detection;Radar;Scattering;MIMO radar;Target detection;Likelihood ratio test;Power allocation},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
