--- a/references.bib
+++ b/references.bib
@@ -51,16 +51,21 @@
   keywords = {cognitive radio;Markov processes;radio spectrum management;Markov chain;Gilbert-Elliot model;data transmission;radio spectrum;stationary unknown reward distributions;stochastic restless multiarmed bandit problem;multiband dynamic spectrum access;spectrum sensing policy;cognitive radio networks;Sensors;Cognitive radio;Markov processes;Indexes;Dynamic spectrum access;Data communication;Cognitive radio;opportunistic spectrum access (OSA);restless multi-armed bandit (RMAB);online learning;multi-band spectrum sensing},
 }
 
-@Article{Aurelien2008,
-  author  = {Aur\'elien,Garivier and Eric,Moulines},
-  title   = {On Upper-Confidence Bound Policies for Non-Stationary Bandit Problems},
-  journal = {arXiv e-prints},
-  year    = {2008},
-  pages   = {ar:0805.3415},
-  month   = {May},
-  note    = {0805.3415; Provided by the SAO/NASA Astrophysics Data System},
-  groups  = {MAB, MAB algorithms},
-  url     = {https://ui.adsabs.harvard.edu/abs/2008arXiv0805.3415G},
+@Article{Garivier2008,
+  author        = {{Garivier}, Aur{\'e}lien and {Moulines}, Eric},
+  title         = {{On Upper-Confidence Bound Policies for Non-Stationary Bandit Problems}},
+  journal       = {arXiv e-prints},
+  year          = {2008},
+  pages         = {arXiv:0805.3415},
+  month         = {May},
+  adsnote       = {Provided by the SAO/NASA Astrophysics Data System},
+  adsurl        = {https://ui.adsabs.harvard.edu/abs/2008arXiv0805.3415G},
+  archiveprefix = {arXiv},
+  eid           = {arXiv:0805.3415},
+  eprint        = {0805.3415},
+  groups        = {MAB algorithms},
+  keywords      = {Mathematics - Statistics},
+  primaryclass  = {math.ST},
 }
 
 @Misc{Besson2018,
