--- a/paper.tex
+++ b/paper.tex
@@ -138,10 +138,10 @@ Another way to form the estimates is to probe the different channels for a suffi
 The probing needs to be efficient since the channels are continuously evolving and the probing will impact the radar performance because it requires performing extra tasks in addition to the main operation of the radar.  Therefore, it is necessary to decide when to exploit the TX-RX subset currently providing the best payoff or explore other subsets that may or may not provide even higher SINR levels. 
 This is the exploration-exploitation trade-off.
 
-A well-known framework, called multi-armed bandits (MAB) framework, provides policies for selecting actions to balance the exploration and exploitation trade-off while maximizing the employed reward function \cite{Lattimore2019}
-In the literature, such a framework is effectively used, for example, for opportunistic spectrum access, where the secondary user must select the frequency band without interfering with the primary user \cite{Zhao2008}.
-In addition, authors in \cite{Mukherjee2012} and \cite{Kuai2019} propose using a combinatorial MAB approach as a robust way for selecting the MIMO antenna subset for maximizing throughput in communication systems.
-Extensions from combinatorial multi-armed bandits are used to address the problem with exponentially growing action space in the function of antennas.
+A multi-armed bandit (MAB) framework, provides policies for selecting actions to balance the exploration and exploitation trade-off while maximizing the employed reward function \cite{Lattimore2019}.
+In the literature, such a framework is effectively used for example in opportunistic spectrum access, in which the secondary user must choose frequency band in a way that interference to the primary user is not caused \cite{Zhao2008}.
+Also, authors in \cite{Mukherjee2012} and \cite{Kuai2019} propose using a combinatorial MAB approach as a robust way for selecting the MIMO antenna subset for maximizing throughput in communication systems.
+Extensions from combinatorial multi-armed bandits are used to address the problem with large combinatorial action space.
 
 This paper proposes a machine learning approach for the active TX-RX subset selection in the distributed MIMO radar context.
 It is based on the same principle as in the papers \cite{Mukherjee2012} and \cite{Kuai2019}. 
@@ -302,10 +302,11 @@ The reformulation is possible because the reward function ($\ref{eq:obj_func}$) 
 
 Usually in the combinatorial MAB problem, the agent does not know the mapping from the arm rewards to the super arm rewards.
 However, here the reward function $\eqref{eq:reward_func}$ is known which enables us to use MAB algorithms from the classical MAB problem.
-Similar approach is used for MIMO antenna subset selection in mobile communications, where each arm represents power-normalized throughput for each antenna and UCB1-algorithm paired with an exhaustive search were used to solve the subset selection problem \cite{Mukherjee2012}.
-The reward distributions were assumed stationary in \cite{Mukherjee2012}.  
+Authors in \cite{Mukherjee2012} and \cite{Kuai2019} use similar approach for MIMO antenna selection in mobile communications to maximize the throughput.
+The approach in \cite{Mukherjee2012} use UCB-1 algorithm and the reward statistics are constant.
+While, authors in \cite{Kuai2019} use Thompson sampling and non-stationary and stationary rewards are considered.
 
-In this paper we generalize the approach in \cite{Mukherjee2012} to any index-based algorithm and non-stationary reward distributions. 
+In this paper we generalize the approaches in \cite{Mukherjee2012, Kuai2019} to any index-based algorithm and non-stationary reward distributions. 
 The proposed algorithm for solving the combinatorial MAB problem with known mapping from the arm rewards to the super arm rewards is shown in Algorithm~\ref{alg:gcmab}.
 On line~\ref{alg:calc_idx} of the Algorithm~\ref{alg:gcmab} any index-based MAB algorithm can be used to find the indexes, and on line~\ref{alg:find_sa} any optimization method can be used to find the super arm.
 The indexes calculated by a MAB algorithm will ensure that the exploration and exploitation trade-off is balanced well.
