Fix reference upper letters
Signed-off-by: Pulkkinen Petteri <petteri.pulkkinen@aalto.fi>

--- a/references.bib
+++ b/references.bib
@@ -80,7 +80,7 @@
 
 @InProceedings{Mukherjee2012,
   author    = {A. {Mukherjee} and A. {Hottinen}},
-  title     = {Learning algorithms for energy-efficient MIMO antenna subset selection: Multi-armed bandit framework},
+  title     = {Learning algorithms for energy-efficient {MIMO} antenna subset selection: Multi-armed bandit framework},
   booktitle = {2012 Proceedings of the 20th European Signal Processing Conference (EUSIPCO)},
   year      = {2012},
   pages     = {659-663},
@@ -309,7 +309,7 @@
 
 @InProceedings{Kuai2019,
   author    = {Z. {Kuai} and T. {Wang} and S. {Wang}},
-  title     = {Transmit Antenna Selection in Massive MIMO Systems: An Online Learning Framework},
+  title     = {Transmit Antenna Selection in Massive {MIMO} Systems: An Online Learning Framework},
   booktitle = {2019 IEEE/CIC International Conference on Communications in China (ICCC)},
   year      = {2019},
   pages     = {496-501},
@@ -323,7 +323,7 @@
 
 @InProceedings{Aittomaeki2011,
   author    = {T. {Aittomäki} and H. {Godrich} and H. V. {Poor} and V. {Koivunen}},
-  title     = {Resource allocation for target detection in distributed MIMO radars},
+  title     = {Resource allocation for target detection in distributed {MIMO} radars},
   booktitle = {2011 Conference Record of the Forty Fifth Asilomar Conference on Signals, Systems and Computers (ASILOMAR)},
   year      = {2011},
   pages     = {873-877},
